feat: 인터페이스 구현 및 컨트롤러 스캐너 분리